--- a/UAS_Kelompok20_PABD.csproj
+++ b/UAS_Kelompok20_PABD.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data Member.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Data Member.Designer.cs">
+      <DependentUpon>Data Member.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data Pegawai.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Data Pegawai.Designer.cs">
       <DependentUpon>Data Pegawai.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Data Peminjam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Data Peminjam.Designer.cs">
+      <DependentUpon>Data Peminjam.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -72,8 +84,14 @@
     <Compile Include="Tambah Data.Designer.cs">
       <DependentUpon>Tambah Data.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Data Member.resx">
+      <DependentUpon>Data Member.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Data Pegawai.resx">
       <DependentUpon>Data Pegawai.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data Peminjam.resx">
+      <DependentUpon>Data Peminjam.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
